--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## add by me
 */migrations/
 temp.py
+.vscode/
 ## add by me end
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
