--- a/.gitignore
+++ b/.gitignore
@@ -179,9 +179,6 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/django
 
 
-reclaim/.DS_Store
-reclaim/accounts/migrations/0001_initial.py
-reclaim/items/migrations/0001_initial.py
-reclaim/storeview/migrations/0001_initial.py
-reclaim/userview/migrations/0001_initial.py
+.DS_Store
+0001_initial.py
 ER.md
