機能改善: アイテムカテゴリを追加し、フォームのバリデーションを強化しました。UIを改善し、メッセージ表示機能を追加しました。

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## add by me start
 temp.py
 .vscode/
+images/
 ## add by me end
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
@@ -179,3 +180,4 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/django
 
 .github/copilot-instructions.md
+.DS_Store
