--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 temp.py
 .vscode/
 images/
+**/migrations/[0-9][0-9][0-9][0-9]_*.py
+!**/migrations/0001_initial.py
 ## add by me end
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
