--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,65 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-# created-by: conda 24.11.1
-amqp=5.3.1=pypi_0
-annotated-types=0.7.0=pypi_0
-anyio=4.8.0=pypi_0
-asgiref=3.8.1=py312hca03da5_0
-billiard=4.2.1=pypi_0
-bzip2=1.0.8=h80987f9_6
-ca-certificates=2024.9.24=hca03da5_0
-cachetools=5.5.1=pypi_0
-celery=5.4.0=pypi_0
-certifi=2024.12.14=pypi_0
-charset-normalizer=3.4.1=pypi_0
-click=8.1.8=pypi_0
-click-didyoumean=0.3.1=pypi_0
-click-plugins=1.1.1=pypi_0
-click-repl=0.3.0=pypi_0
-distro=1.9.0=pypi_0
-django=5.1=py312hca03da5_0
-django-background-tasks=1.2.8=pypi_0
-django-bootstrap-datepicker-plus=5.0.5=pypi_0
-django-bootstrap5=24.3=pypi_0
-django-debug-toolbar=5.0.1=pypi_0
-django-environ=0.12.0=pypi_0
-expat=2.6.3=h313beb8_0
-google-ai-generativelanguage=0.6.15=pypi_0
-google-api-core=2.24.0=pypi_0
-google-api-python-client=2.159.0=pypi_0
-google-auth=2.38.0=pypi_0
-google-auth-httplib2=0.2.0=pypi_0
-google-generativeai=0.8.4=pypi_0
-googleapis-common-protos=1.66.0=pypi_0
-grpcio=1.60.1=pypi_0
-grpcio-status=1.69.0=pypi_0
-h11=0.14.0=pypi_0
-httpcore=1.0.7=pypi_0
-httplib2=0.22.0=pypi_0
-httpx=0.28.1=pypi_0
-idna=3.10=pypi_0
-isort=5.13.2=pypi_0
-jiter=0.8.2=pypi_0
-kombu=5.4.2=pypi_0
-libcxx=14.0.6=h848a8c0_0
-libffi=3.4.4=hca03da5_1
-ncurses=6.4=h313beb8_0
-openai=1.61.1=pypi_0
-openssl=3.0.15=h80987f9_0
-pillow=11.0.0=pypi_0
-pip=24.2=py312hca03da5_0
-prompt-toolkit=3.0.50=pypi_0
-proto-plus=1.25.0=pypi_0
-protobuf=5.29.3=pypi_0
-pyasn1=0.6.1=pypi_0
-pyasn1-modules=0.4.1=pypi_0
-pydantic=2.10.5=pypi_0
-pydantic-core=2.27.2=pypi_0
-pyparsing=3.2.1=pypi_0
-python=3.12.7=h99e199e_0
-python-dateutil=2.9.0.post0=pypi_0
-python-dotenv=1.0.1=pypi_0
-readline=8.2=h1a28f6b_0
-redis=5.2.1=pypi_0
-requests=2.32.3=pypi_0
-rsa=4.9=pypi_0
-setuptools=75.1.0=py312hca03da5_0
-six=1.17.0=pypi_0
-sniffio=1.3.1=pypi_0
-sqlite=3.45.3=h80987f9_0
-sqlparse=0.4.4=py312hca03da5_0
-tk=8.6.14=h6ba3021_0
-tqdm=4.67.1=pypi_0
-typing-extensions=4.12.2=pypi_0
-tzdata=2025.1=pypi_0
-uritemplate=4.1.1=pypi_0
-urllib3=2.3.0=pypi_0
-vine=5.1.0=pypi_0
-wcwidth=0.2.13=pypi_0
-wheel=0.44.0=py312hca03da5_0
-xz=5.4.6=h80987f9_1
-zlib=1.2.13=h18a0788_1
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.8.0
+billiard==4.2.1
+buildozer==1.5.0
+cachetools==5.5.1
+celery==5.4.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+distro==1.9.0
+django-background-tasks==1.2.8
+django-bootstrap-datepicker-plus==5.0.5
+django-bootstrap5==24.3
+django-debug-toolbar==5.0.1
+django-environ==0.12.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.0
+google-api-python-client==2.159.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.66.0
+grpcio==1.60.1
+grpcio-status==1.69.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+isort==5.13.2
+jiter==0.8.2
+kombu==5.4.2
+openai==1.61.1
+pexpect==4.9.0
+pillow==11.0.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+proto-plus==1.25.0
+protobuf==5.29.3
+ptyprocess==0.7.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.5
+pydantic_core==2.27.2
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+redis==5.2.1
+requests==2.32.3
+rsa==4.9
+setuptools==75.1.0
+six==1.17.0
+sniffio==1.3.1
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
+wheel==0.44.0
