.gitignoreを更新し、不要なファイルを追加。AI生成JSONの保存処理を改善し、アイテム詳細ビューでのユニコード正規化を強化。検索機能のクエリ処理を修正し、重複データの除去を実装。

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 ## add by me start
-temp.py
 .vscode/
+.github/
 images/
 **/migrations/[0-9][0-9][0-9][0-9]_*.py
-!**/migrations/0001_initial.py
+!**/migrations/0001_initial.py¥¥^-0
+ER.drawio
+ER.md
+契約書.md
+temp.md
+temp.py
+reclaim/start.sh
 ## add by me end
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
@@ -16,6 +22,7 @@ images/
 __pycache__/
 local_settings.py
 db.sqlite3
+
 db.sqlite3-journal
 
 
@@ -183,8 +190,9 @@ cython_debug/
 
 .github/copilot-instructions.md
 .DS_Store
-契約書.md
-temp.md
 .gitignore
 Reclaim.code-workspace
 nohup.out
+reclaim/media/images
+media/images/
+*.jpg
