--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,9 @@ google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.4
 googleapis-common-protos==1.66.0
-grpcio==1.70.0
-grpcio-status==1.69.0
+gunicorn
+grpcio>=1.70.0
+grpcio-status>=1.69.0
 h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
@@ -63,3 +64,4 @@ urllib3==2.3.0
 vine==5.1.0
 wcwidth==0.2.13
 wheel==0.44.0
+whitenoise
